--- a/pom.xml
+++ b/pom.xml
@@ -19,18 +19,14 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-boot-starter-data-rest.version>1.3.5.RELEASE</spring-boot-starter-data-rest.version>
+		<!--<spring-boot-starter-data-rest.version>1.3.5.RELEASE</spring-boot-starter-data-rest.version>-->
 		<spring-boot-starter-data-jpa.version>1.3.5.RELEASE</spring-boot-starter-data-jpa.version>
 		<spring-boot-starter-web.version>1.3.5.RELEASE</spring-boot-starter-web.version>
 		<spring-boot-devtools.version>1.3.5.RELEASE</spring-boot-devtools.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
-			<version>${spring-boot-starter-data-rest.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -64,7 +60,14 @@
 			<version>2.9.4</version>
 		</dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
+
+
+        <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
