--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 		<spring-boot-devtools.version>1.3.5.RELEASE</spring-boot-devtools.version>
 
         <!-- Spring -->
-        <spring-test.version>4.2.6.RELEASE</spring-test.version>
+        <spring-test.version>4.3.0.RELEASE</spring-test.version>
 
         <!-- Maven plugins -->
         <versioneye-maven-plugin.version>3.9.2</versioneye-maven-plugin.version>
@@ -89,10 +89,11 @@
         <!-- Test -->
         <com.openpojo.version>0.8.4</com.openpojo.version>
         <junit.version>4.12</junit.version>
-        <jacoco-maven-plugin.version>0.7.6.201602180812</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
 
         <!-- Utilities -->
         <joda-time.version>2.9.4</joda-time.version>
+        <h2.version>1.4.192</h2.version>
 	</properties>
 
 	<dependencies>
@@ -149,6 +150,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+            <version>${h2.version}</version>
 		</dependency>
 
 	</dependencies>
