--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,8 @@
 		<spring-boot-devtools.version>1.3.5.RELEASE</spring-boot-devtools.version>
 
         <!-- Spring -->
-        <spring-test.version>4.3.0.RELEASE</spring-test.version>
+        <!-- Cannot run tests if spring-test version not the same as spring-core-->
+        <spring-test.version>4.2.6.RELEASE</spring-test.version>
 
         <!-- Maven plugins -->
         <versioneye-maven-plugin.version>3.9.2</versioneye-maven-plugin.version>
