--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "angular": "~1.5.6",
     "angular-resource": "~1.5.6",
-    "bootstrap-css-only": "~3.3.6"
+    "bootstrap-css-only": "~3.3.6",
+    "startbootstrap-sb-admin-2": "1.0.4",
+    "angular-bootstrap":"1.3.3"
   }
 }
