--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,9 @@
     "bootstrap-css-only": "~3.3.6",
     "startbootstrap-sb-admin-2": "1.0.4",
     "angular-bootstrap":"1.3.3",
-    "angular-route":"v1.5.7"
+    "angular-route":"v1.5.7",
+    "bootstrap-star-rating":"4.0.0"
+
+
   }
 }
