--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
     "startbootstrap-sb-admin-2": "1.0.4",
     "angular-bootstrap":"1.3.3",
     "angular-route":"v1.5.7",
-    "bootstrap-star-rating":"4.0.0"
-
-
+    "angular-nvd3":"1.0.7",
+    "angular-jk-rating-stars":"1.0.3"
   }
 }
