--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-bootstrap":"1.3.3",
     "angular-route":"v1.5.7",
     "angular-nvd3":"1.0.7",
-    "angular-jk-rating-stars":"1.0.3"
+    "angular-jk-rating-stars":"1.0.3",
+    "angular-google-chart":"0.1.0"
   }
 }
