--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,10 @@
     "angular": "~1.5.6",
     "angular-resource": "~1.5.6",
     "bootstrap-css-only": "~3.3.6",
-    "startbootstrap-sb-admin-2": "1.0.4",
-    "angular-bootstrap":"1.3.3",
-    "angular-route":"v1.5.7",
-    "angular-nvd3":"1.0.7",
+    "startbootstrap-sb-admin-2": "https://github.com/BlackrockDigital/startbootstrap-sb-admin-2",
+    "angular-bootstrap":"2.1.3",
+    "angular-route":"v1.5.8",
+    "angular-nvd3":"1.0.9",
     "angular-jk-rating-stars":"1.0.3",
     "angular-google-chart":"0.1.0"
   }
