--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "angular": "~1.5.6",
     "angular-resource": "~1.5.6",
     "bootstrap-css-only": "~3.3.6",
-    "startbootstrap-sb-admin-2": "https://github.com/BlackrockDigital/startbootstrap-sb-admin-2",
+    "startbootstrap-sb-admin-2-be": "v3.3.7",
     "angular-bootstrap":"2.1.3",
     "angular-route":"v1.5.8",
     "angular-nvd3":"1.0.9",
