--- a/pom.xml
+++ b/pom.xml
@@ -229,21 +229,22 @@
                 </executions>
             </plugin>
             <plugin>
-            <groupId>com.spotify</groupId>
-            <artifactId>docker-maven-plugin</artifactId>
-            <version>0.4.13</version>
-            <configuration>
-                <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-                <dockerDirectory>src/main/docker</dockerDirectory>
-                <resources>
-                    <resource>
-                        <targetPath>/</targetPath>
-                        <directory>${project.build.directory}</directory>
-                        <include>${project.build.finalName}.jar</include>
-                    </resource>
-                </resources>
-            </configuration>
-        </plugin>
+    <groupId>com.spotify</groupId>
+    <artifactId>docker-maven-plugin</artifactId>
+    <version>0.4.13</version>
+ <configuration>  
+       <imageName>cute-db-server</imageName>
+       <baseImage>java</baseImage>
+       <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+     <resources>
+           <resource>
+                    <targetPath>/</targetPath>
+                    <directory>${project.build.directory}</directory>
+                    <include>${project.build.finalName}.jar</include>
+           </resource>
+  </resources>
+  </configuration>
+</plugin>
         </plugins>
     </build>
 
