--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.cutedb</groupId>
     <artifactId>cutedbserver</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>cutedb-server</name>
@@ -75,15 +75,14 @@
         <java.version>1.8</java.version>
 
         <!-- Spring Boot -->
-        <spring-boot.version>1.4.0.RELEASE</spring-boot.version>
+        <spring-boot.version>1.5.2.RELEASE</spring-boot.version>
         <spring-boot-starter-data-rest.version>${spring-boot.version}</spring-boot-starter-data-rest.version>
         <spring-boot-starter-data-jpa.version>${spring-boot.version}</spring-boot-starter-data-jpa.version>
         <spring-boot-starter-web.version>${spring-boot.version}</spring-boot-starter-web.version>
+        <spring-boot-starter-test.version>${spring-boot.version}</spring-boot-starter-test.version>
         <spring-boot-devtools.version>${spring-boot.version}</spring-boot-devtools.version>
-
-        <!-- Spring -->
-        <!-- Cannot run tests if spring-test version not the same as spring-core-->
-        <spring-test.version>4.2.6.RELEASE</spring-test.version>
+        <spring-boot-test.version>${spring-boot.version}</spring-boot-test.version>
+        <spring-boot-test-autoconfigure.version>${spring-boot.version}</spring-boot-test-autoconfigure.version>
 
         <!-- Maven plugins -->
         <versioneye-maven-plugin.version>3.10.2</versioneye-maven-plugin.version>
@@ -92,12 +91,10 @@
         <checksum-maven-plugin.version>1.3</checksum-maven-plugin.version>
 
         <!-- Test -->
-        <com.openpojo.version>0.8.4</com.openpojo.version>
-        <junit.version>4.12</junit.version>
         <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
 
         <!-- Utilities -->
-        <joda-time.version>2.9.4</joda-time.version>
+        <joda-time.version>2.9.7</joda-time.version>
         <h2.version>1.4.192</h2.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         
@@ -121,25 +118,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>${spring-boot-devtools.version}</version>
         </dependency>
-
-        <!-- Spring -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring-test.version}</version>
-        </dependency>
-
-        <!-- Test -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.openpojo</groupId>
-            <artifactId>openpojo</artifactId>
-            <version>${com.openpojo.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter-test.version}</version>
             <scope>test</scope>
         </dependency>
 
