--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.datasource.url=jdbc:h2:mem:CUTEDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=${port:9000}
 security.basic.enabled=false
